Fixing Rest service

--- a/src/main/resources/www/index.html
+++ b/src/main/resources/www/index.html
@@ -7,10 +7,11 @@
 </head>
 <body>
 <h1>Bienvenido al Servidor Web</h1>
+
 <form id="getForm">
     <label for="name">Nombre:</label>
     <input type="text" id="name" name="name" required>
-    <button type="submit">Enviar (GET)</button>
+    <button type="submit">Consultar Usuario</button>
 </form>
 <div id="getResponse"></div>
 
@@ -22,8 +23,36 @@
 <form id="postForm">
     <label for="postname">Nombre:</label>
     <input type="text" id="postname" name="postname" required>
-    <button type="submit">Enviar (POST)</button>
+    <button type="submit">Registrar Usuario</button>
 </form>
 <div id="postResponse"></div>
 </body>
 </html>
+
+<script>
+    // Función para manejar el formulario GET
+    document.getElementById("getForm").addEventListener("submit", function (event) {
+        event.preventDefault();
+        const name = document.getElementById("name").value;
+        fetch(`/App/rest/hello?name=${encodeURIComponent(name)}`)
+            .then(response => response.json())
+            .then(data => document.getElementById("getResponse").innerText = data.message)
+            .catch(error => console.error('Error:', error));
+    });
+
+    // Función para manejar el formulario POST
+    document.getElementById("postForm").addEventListener("submit", function (event) {
+        event.preventDefault();
+        const name = document.getElementById("postname").value;
+        fetch(`/App/rest/register`, {
+            method: "POST",
+            body: `name=${encodeURIComponent(name)}`,
+            headers: {
+                "Content-Type": "application/x-www-form-urlencoded"
+            }
+        })
+            .then(response => response.json())
+            .then(data => document.getElementById("postResponse").innerText = data.message)
+            .catch(error => console.error('Error:', error));
+    });
+</script>
